# stacked

./: next.config.ts  package-lock.json  package.json
.github/: copilot-instructions.md
hotel/: README.md  pyproject.toml  requirements.txt
hotel/scripts/: run.sh  setup.sh  test.sh
hotel/src/api/: main.py
hotel/src/application/: interfaces.py  use_cases.py
hotel/src/domain/: entities.py
hotel/src/infrastructure/: models.py  repositories.py
hotel/tests/api/: test_api.py
hotel/tests/application/: test_use_cases.py
hotel/tests/domain/: test_entities.py
src/app/: Address.tsx  OpeningHours.tsx  globals.css  layout.tsx  page.tsx
src/app/api/create-checkout-session/: route.ts
src/app/checkout/: page.tsx
src/app/login/: page.tsx
src/app/pos/: layout.tsx  page.tsx
src/app/pos/orders/: page.tsx
src/components/: Address.tsx  BurgerPopup.tsx  ChickenWingsPopup.tsx  Footer.tsx  Header.tsx  LoadedChickPopup.tsx  MenuTabs.tsx  OpeningHours.tsx  POSSidebar.tsx
src/lib/: stripe.ts
