[tool.poetry]
name = "hotel"
version = "0.1.0"
description = "Hotel booking system"
authors = ["Crown Hotels"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.110.2"
uvicorn = "0.29.0"
sqlalchemy = "2.0.29"
python-dotenv = "1.0.1"

[tool.poetry.dev-dependencies]
pytest = "7.4.4"
pytest-cov = "5.0.0"
ruff = "0.3.5"
pyre-check = "0.9.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyre]
source-directories = ["src"]
ignore-all-errors = false

